--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -24,6 +24,9 @@
   .navbar
     &__contacts
       display: none
+    
+@media (max-width: 540px)
+  .navbar
     &__button
       font-size: 12px
       padding: 15px 26px
