--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,14 +13,14 @@ img {
 
 @media (max-width: 1200px) {
   .container {
-    width: 760px;
+    max-width: 960px;
+    width: 90%;
   }
 }
 
 @media (max-width: 768px) {
   .container {
-    max-width: 580px;
-    width: 95%;
+    width: 90%;
   }
 }
 
@@ -84,6 +84,9 @@ img {
   .navbar__contacts {
     display: none;
   }
+}
+
+@media (max-width: 540px) {
   .navbar__button {
     font-size: 12px;
     padding: 15px 26px;
