Добавлена главная секция

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,4 +1,6 @@
 @import 'colors'
 @import 'interface'
-// Импорт стилей шапкм
+// Импорт стилей шапки
 @import 'blocks/navbar'
+// Импорт секции hero
+@import 'blocks/hero'
