--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -13,6 +13,7 @@
     flex-direction: column
   &__button
     margin-left: 30px
+    outline: none
   &__phone
     display: inline-block
     color: $text-color
