Добавлены шрифты + Pixel Perfect

--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -1,6 +1,7 @@
 
 body
-  font-family: sans-serif
+  font-family: 'Museo Sans', sans-serif
+  font-weight: 300
 img
   max-width: 100% 
 .container
@@ -12,7 +13,7 @@ img
     width: 90%
 @media (max-width: 768px)
   .container
-    width: 90%  
+    width: 89%  
 .button
   border-radius: 10px
   background-color: $main-color
