--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -1,16 +1,19 @@
 .hero
   padding: 50px 0
+  background-color: $bg-color
   &-block    
     display: flex
   &-text
-    flex-basis: 50%
-    padding-right: 140px
+    flex-basis: 44%
+    padding-right: 78px
     &__title
       font-size: 41px
       font-weight: 700
       line-height: 55px
-      margin-bottom: 40px
+      margin-bottom: 35px
+      
     &__subtitle
+      font-weight: 700
       display: inline-block
       font-size: 20px
       margin-bottom: 70px
@@ -32,6 +35,7 @@
       margin-right: 30px
     &__text
       max-width: 300px
+      font-size: 14px
 @media (max-width: 1200px)
   .hero
     &-block
@@ -42,11 +46,12 @@
       padding-right: 10px
 @media (max-width: 768px)
   .hero
+    padding-top: 30px
     &-text
       &__title
         font-size: 24px
         line-height: 1.4
-        margin-bottom: 15px
+        margin-bottom: 2px
       &__subtitle
         font-size: 16px
         margin-bottom: 28px
@@ -55,5 +60,6 @@
         margin-bottom: 20px
       &__text
         font-size: 12px
+        max-width: 70%
       &__image
         margin-right: 15px
