--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,22 @@
+@font-face {
+  font-family: 'Museo Sans';
+  src: url("../fonts/MuseoSans/MuseoSansCyrl-300.eot");
+  src: url("../fonts/MuseoSans/MuseoSansCyrl-300.eot?#iefix") format("embedded-opentype"), url("../fonts/MuseoSans/MuseoSansCyrl-300.woff") format("woff"), url("../fonts/MuseoSans/MuseoSansCyrl-300.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Museo Sans';
+  src: url("../fonts/MuseoSans/MuseoSansCyrl-700.eot");
+  src: url("../fonts/MuseoSans/MuseoSansCyrl-700.eot?#iefix") format("embedded-opentype"), url("../fonts/MuseoSans/MuseoSansCyrl-700.woff") format("woff"), url("../fonts/MuseoSans/MuseoSansCyrl-700.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
 body {
-  font-family: sans-serif;
+  font-family: 'Museo Sans', sans-serif;
+  font-weight: 300;
 }
 
 img {
@@ -20,7 +37,7 @@ img {
 
 @media (max-width: 768px) {
   .container {
-    width: 90%;
+    width: 89%;
   }
 }
 
@@ -65,18 +82,21 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  font-size: 13px;
 }
 
 .navbar__button {
   margin-left: 30px;
   outline: none;
+  font-size: 13px;
+  font-weight: 700;
 }
 
 .navbar__phone {
   display: inline-block;
   color: #333333;
   font-size: 20px;
-  font-weight: 400;
+  font-weight: 700;
   text-decoration: none;
   margin-top: 10px;
 }
@@ -92,10 +112,15 @@ img {
   .navbar__logo {
     width: 90px;
   }
+  .navbar__button {
+    border-radius: 5px;
+    font-size: 10px;
+  }
 }
 
 .hero {
   padding: 50px 0;
+  background-color: #f5f5f5;
 }
 
 .hero-block {
@@ -105,19 +130,20 @@ img {
 }
 
 .hero-text {
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-  padding-right: 140px;
+  -ms-flex-preferred-size: 44%;
+      flex-basis: 44%;
+  padding-right: 78px;
 }
 
 .hero-text__title {
   font-size: 41px;
   font-weight: 700;
   line-height: 55px;
-  margin-bottom: 40px;
+  margin-bottom: 35px;
 }
 
 .hero-text__subtitle {
+  font-weight: 700;
   display: inline-block;
   font-size: 20px;
   margin-bottom: 70px;
@@ -157,6 +183,7 @@ img {
 
 .hero-list__text {
   max-width: 300px;
+  font-size: 14px;
 }
 
 @media (max-width: 1200px) {
@@ -175,10 +202,13 @@ img {
 }
 
 @media (max-width: 768px) {
+  .hero {
+    padding-top: 30px;
+  }
   .hero-text__title {
     font-size: 24px;
     line-height: 1.4;
-    margin-bottom: 15px;
+    margin-bottom: 2px;
   }
   .hero-text__subtitle {
     font-size: 16px;
@@ -189,6 +219,7 @@ img {
   }
   .hero-list__text {
     font-size: 12px;
+    max-width: 70%;
   }
   .hero-list__image {
     margin-right: 15px;
