--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -11,14 +11,17 @@
   &__address
     display: flex
     flex-direction: column
+    font-size: 13px
   &__button
     margin-left: 30px
     outline: none
+    font-size: 13px
+    font-weight: 700
   &__phone
     display: inline-block
     color: $text-color
     font-size: 20px
-    font-weight: 400
+    font-weight: 700
     text-decoration: none
     margin-top: 10px
 @media (max-width: 768px)
@@ -30,4 +33,7 @@
       padding: 15px 26px
     &__logo
       width: 90px
+    &__button
+      border-radius: 5px
+      font-size: 10px
    
