Добавлена секция Offer + адаптив + pixel perfect

--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -1,7 +1,11 @@
-
+*
+  box-sizing: border-box
 body
   font-family: 'Museo Sans', sans-serif
   font-weight: 300
+h1, h2 
+  margin: 0
+  padding: 0
 img
   max-width: 100% 
 .container
@@ -19,3 +23,25 @@ img
   background-color: $main-color
   border: none
   padding: 18px 30px
+  font-weight: 700
+  &:hover
+    background-color: lighten($main-color, 10%)
+    cursor: pointer
+.section
+  padding: 72px 0;
+  &-title
+    font-size: 24px
+    font-weight: 700
+    line-height: 35px
+  &-subtitle
+    font-size: 16px
+    display: block
+.input
+  border: 1px solid $border-input
+  padding: 24px 26px
+  font-size: 15px
+  border-radius: 10px
+
+@media (max-width: 768px)
+  .section
+    padding: 53px 0
