--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,9 +14,19 @@
   font-style: normal;
 }
 
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
   font-family: 'Museo Sans', sans-serif;
   font-weight: 300;
+}
+
+h1, h2 {
+  margin: 0;
+  padding: 0;
 }
 
 img {
@@ -46,6 +56,40 @@ img {
   background-color: #ffd200;
   border: none;
   padding: 18px 30px;
+  font-weight: 700;
+}
+
+.button:hover {
+  background-color: #ffdb33;
+  cursor: pointer;
+}
+
+.section {
+  padding: 72px 0;
+}
+
+.section-title {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 35px;
+}
+
+.section-subtitle {
+  font-size: 16px;
+  display: block;
+}
+
+.input {
+  border: 1px solid #dddddd;
+  padding: 24px 26px;
+  font-size: 15px;
+  border-radius: 10px;
+}
+
+@media (max-width: 768px) {
+  .section {
+    padding: 53px 0;
+  }
 }
 
 .navbar {
@@ -89,7 +133,6 @@ img {
   margin-left: 30px;
   outline: none;
   font-size: 13px;
-  font-weight: 700;
 }
 
 .navbar__phone {
@@ -119,7 +162,7 @@ img {
 }
 
 .hero {
-  padding: 50px 0;
+  padding: 50px 0 50px 0;
   background-color: #f5f5f5;
 }
 
@@ -130,9 +173,10 @@ img {
 }
 
 .hero-text {
-  -ms-flex-preferred-size: 44%;
-      flex-basis: 44%;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
   padding-right: 78px;
+  margin-top: 27px;
 }
 
 .hero-text__title {
@@ -152,6 +196,7 @@ img {
 .hero-list {
   margin: 0;
   padding: 0;
+  max-width: 330px;
 }
 
 .hero-list__item {
@@ -162,6 +207,11 @@ img {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 25px;
+  line-height: 24px;
+}
+
+.hero-list__item:last-child {
+  margin-bottom: 0;
 }
 
 .hero-list__image {
@@ -205,6 +255,9 @@ img {
   .hero {
     padding-top: 30px;
   }
+  .hero-text {
+    margin-top: 17px;
+  }
   .hero-text__title {
     font-size: 24px;
     line-height: 1.4;
@@ -216,6 +269,7 @@ img {
   }
   .hero-list__item {
     margin-bottom: 20px;
+    line-height: 1;
   }
   .hero-list__text {
     font-size: 12px;
@@ -223,6 +277,125 @@ img {
   }
   .hero-list__image {
     margin-right: 15px;
+  }
+}
+
+.offer {
+  background: url("../img/offer/offer-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center right;
+  position: relative;
+}
+
+.offer:before {
+  content: '';
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+}
+
+.offer-block {
+  width: 50%;
+  padding-right: 90px;
+  position: relative;
+}
+
+.offer__title {
+  max-width: 360px;
+  margin-bottom: 19px;
+  line-height: 35px;
+}
+
+.offer__subtitle {
+  max-width: 250px;
+  margin-bottom: 30px;
+}
+
+.offer__input {
+  margin-bottom: 30px;
+  width: 240px;
+}
+
+.offer__input:first-child {
+  margin-right: 10px;
+}
+
+.offer__button {
+  width: 100%;
+  min-height: 70px;
+  margin-bottom: 25px;
+}
+
+.offer__call {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 15px;
+  line-height: 24px;
+}
+
+.offer__manager, .offer__callback {
+  width: 50%;
+}
+
+.offer__callback {
+  padding-left: 40px;
+}
+
+.offer__phone {
+  font-weight: bold;
+}
+
+@media (max-width: 1200px) {
+  .offer {
+    background-size: cover;
+  }
+  .offer__input {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .offer__button {
+    font-size: 13px;
+  }
+}
+
+@media (max-width: 768px) {
+  .offer {
+    background: #fff;
+  }
+  .offer-block {
+    width: 100%;
+    padding-right: 0;
+  }
+  .offer__title {
+    font-size: 18px;
+    line-height: 1.2;
+    margin-bottom: 15px;
+  }
+  .offer__subtitle {
+    margin-bottom: 24px;
+  }
+  .offer__button {
+    margin-bottom: 13px;
+  }
+  .offer__call {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .offer__manager, .offer__callback {
+    width: 100%;
+  }
+  .offer__manager {
+    margin-bottom: 10px;
+  }
+  .offer__callback {
+    padding-left: 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
