--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -23,6 +23,7 @@ img
   background-color: $main-color
   border: none
   padding: 18px 30px
+  outline: none
   font-weight: 700
   &:hover
     background-color: lighten($main-color, 10%)
