--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -25,6 +25,7 @@
     margin-bottom: 30px
   &__input
     margin-bottom: 30px
+    outline: none
     width: 240px
     &:first-child
       margin-right: 10px
